0x07-python-test_driven_development/tests/0-add_integer.txt
doctest for 0-add_integer.py
============================

Using ``add_integer``
---------------------

>>> add_integer = __import__('0-add_integer').add_integer

~~~~~~~~~~~~~
Success Cases
~~~~~~~~~~~~~

>>> add_integer(2, 2)
4

>>> add_integer(-2, -2)
-4

>>> add_integer(2, -2)
0

>>> add_integer(500, 10)
510

>>> add_integer(4.3, 5.7)
10

>>> add_integer(4.2, 5)
9

>>> add_integer(2.4)
100


~~~~~~~~~~
Fail Cases
~~~~~~~~~~

>>> add_integer('a')
Traceback (most recent call last):
TypeError: a must be an integer

>>> add_integer('4')
Traceback (most recent call last):
TypeError: a must be an integer

>>> add_integer(4, 'b')
Traceback (most recent call last):
TypeError: b must be an integer
